<resources>
    <string name="app_name">Kidstories</string>
    <string name="action_settings">Settings</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_account">Create Account</string>
    <string name="next">Next</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up_hint">Sign up for new account, enter your email and get started.</string>
    <string name="login_hint">Login to your account,to start reading your stories</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="invalid_email_address_error">Invalid email address</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="add_profile_pic">Add Profile Pic</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="skip">Skip</string>
    <string-array name="onboarding_title">
        <item>Bedtime Stories For Kids</item>
        <item>Add Your own Stories</item>
    </string-array>
    <string-array name="onboarding_bodies">
        <item>Read free bedtime stories, fairy tales, poems for kids and short stories for kids</item>
        <item>You can add your own bedtime stories, fairy tales, poems for kids and short stories for kids</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_story">Add New Story</string>
    <string name="no_image_uploaded">No image Uploaded</string>
    <string name="upload_image">Upload Image</string>
    <string name="type_content">Type Content</string>
    <string name="cover_image">Cover Image</string>
    <string name="add_content_hint">And the fish happened to grow wings...</string>
    <string name="discard">Discard</string>
    <string name="content">Content</string>
    <string name="phone_number">Phone Number</string>
    <string name="internal_storage">internal storage</string>
    <string name="card_number">Card number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="card_expiry_month">Month</string>
    <string name="card_expiray_year">Year</string>
    <string name="card_holder">Card Holder</string>
    <string name="last_digits">The last three digits on the \n last  back of the card</string>
    <string name="donate_now_btn">Donate now</string>
    <string-array name="designation_array">
        <item>Kid</item>
        <item>Adult</item>
    </string-array>

</resources>
