<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    tools:showIn="@layout/activity_donate">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="152dp"
        android:text="@string/card_number"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/card_edit1"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_field_curves"
        android:hint="1234"
        android:textAlignment="center"
        android:textColor="@color/material_grey_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/card_edit2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/card_edit2"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/card_edit1"
        android:background="@drawable/edit_field_curves"
        android:hint="1234"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/material_grey_700"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_edit1"
        app:layout_constraintEnd_toStartOf="@+id/card_edit3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_edit1"
        app:layout_constraintTop_toTopOf="@+id/card_edit1" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/card_edit3"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/card_edit2"
        android:background="@drawable/edit_field_curves"
        android:hint="1234"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/material_grey_700"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_edit2"
        app:layout_constraintEnd_toStartOf="@+id/card_edit4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_edit2"
        app:layout_constraintTop_toTopOf="@+id/card_edit2" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/card_edit4"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/card_edit3"
        android:background="@drawable/edit_field_curves"
        android:hint="1234"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        android:textColor="@color/material_grey_700"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_edit3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_edit3"
        app:layout_constraintTop_toTopOf="@+id/card_edit3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:text="@string/expiry_date"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_edit1" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_field_curves"
        android:hint="@string/card_expiry_month"
        android:inputType="number"
        android:padding="2dp"
        android:textColor="@color/material_grey_700"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_field_curves"
        android:hint="@string/card_expiray_year"
        android:inputType="textPersonName"
        android:padding="2dp"
        android:textColor="@color/material_grey_700"
        app:layout_constraintBottom_toBottomOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toEndOf="@+id/editText5"
        app:layout_constraintTop_toTopOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/edit_field_curves"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textColor="@color/material_grey_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:text="@string/card_holder"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="CVV"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_field_curves"
        android:ems="10"
        android:hint="123"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/material_grey_700"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/last_digits"
        app:layout_constraintBottom_toBottomOf="@+id/editText8"
        app:layout_constraintStart_toEndOf="@+id/editText8"
        app:layout_constraintTop_toTopOf="@+id/editText8"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/donate_button"
        android:text="@string/donate_now_btn"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>